--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
     <link rel="stylesheet" type="text/css" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
 </head>
 
-<body class="bg-t3 center">
-    <h1 class="title-t4">2023 신년계획</h1>
+<body class="bg-t2 center">
+    <h1 class="title-t2"my bucket list</h1>
     <p class="msg">It is kind of fun to do the impossible</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t1 center">컴퓨터 활용능력 1급</div>
+        <div class="bucket img1-t2 center">컴퓨터 활용능력 1급</div>
         <div class="bucket img2-t2 center">매경테스트 제일 높은 등급 받기</div>
-        <div class="bucket img2-t6 center">보육 / 교육 실습 마무리하기</div>
-        <div class="bucket img1-t4 center">한국사 능력시험 1급</div>
+        <div class="bucket img2-t2 center">보육/교육 실습 마무리하기</div>
+        <div class="bucket img1-t2 center">한국사 능력시험 1급</div>
         <div class="bucket img1-t2 center">책 5권이상 읽기</div>
-        <div class="bucket img2-t5 center">나답게 살기</div>
+        <div class="bucket img2-t2 center">대학 포폴 만들기</div>
     </div>
 
 </body>
